# FuzzyAdaptiveBinarization

./: README.md
Cpp/: CMakeLists.txt  compute_utils.cpp  compute_utils.hpp  fuzzy_sat.cpp  fuzzy_sat.hpp  main.cpp
Cpp/lib/include/: fuzzy_sat.hpp
Cpp/lib/src/: compute_utils.cpp
Cpp/test/: test_cf12_images.cpp  test_cho_images.cpp  test_data.cpp  test_data.hpp  test_ham_images.cpp  test_sat_image.cpp  test_sug_images.cpp  test_utils.cpp  test_utils.hpp
Original/Adapted/: fuzzy_adaptive_bin.py
Original/Extracted/: bradley.py  choquet.py  sugeno.py
Original/Implementation/: base.py  base_impl.py  test_cf12_images.py  test_cho_images.py  test_ham_images.py  test_sat_image.py  test_sug_images.py
